# STM32C562_NUCLEO_MEMS

./: .gitignore  C562_TEST1.ioc2  README.md  main.c  memsstudio.md
App/: CMakeLists.txt  app_mems_protocol.c  app_mems_protocol.h  mems_control.c
C562_TEST/: .cproject  .project  C562_TEST1.launch
C562_TEST1_cmake/: C562_ISM330_MEMSStudio.md  CMakeLists.txt  PROJECT_OVERVIEW.md  cmake-build-flow.md  main.c  mindmap.mmd
C562_TEST1_cmake/App/: mems_control.h
C562_TEST1_cmake/Middlewares/ComProtocol/Inc/: serial_cmd.h
C562_TEST1_cmake/Middlewares/ComProtocol/Src/: serial_protocol.c
C562_TEST1_cmake/cmake/: components.cmake  files.cmake
C562_TEST1_cmake/part_drivers/button/: Release_Notes.md
C562_TEST1_cmake/part_drivers/ism330dhcx/: CMakeLists.txt  LICENSE.md  README.md  SW_Security_Level.md  ism330dhcx.h
C562_TEST1_cmake/part_drivers/ism330dhcx/interfaces/custom/: ism330dhcx_io.c  ism330dhcx_io.h
C562_TEST1_cmake/part_drivers/led/: CMakeLists.txt  Release_Notes.md  SW_Security_Level.md
C562_TEST1_cmake/part_drivers/led/gpio/: led.h
C562_TEST1_cmake/part_drivers/led/pwm/: led_pwm.h
C562_TEST1_cmake/user_modifiable/_debug_GCC_NUCLEO-C562RE/: Pre_Include_Global.h
Middlewares/ComProtocol/: CMakeLists.txt
Middlewares/ComProtocol/Inc/: com.h  serial_protocol.h
Middlewares/ComProtocol/Src/: com.c
cmake/: flags.cmake
part_drivers/button/: README.md
part_drivers/ism330dhcx/: Release_Notes.md  ism330dhcx.c
part_drivers/ism330dhcx/interfaces/i2c/: ism330dhcx_io.c  ism330dhcx_io.h
part_drivers/ism330dhcx/interfaces/spi/: ism330dhcx_io.c  ism330dhcx_io.h
part_drivers/led/: LICENSE.md  README.md
part_drivers/led/pwm/: led_pwm.c
user_modifiable/_debug_GCC_NUCLEO-C562RE/: RTE_Components.h
